--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,7 @@ address {
 }
 
 .overlay {
-  height: 600px;
+  /* height: 600px; */
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
