--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,12 @@
   --gradient: rgba(47, 48, 58, 0.4);
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: Roboto, sans-serif;
@@ -63,7 +69,6 @@ address {
 }
 
 .container {
-  box-sizing: border-box;
   width: 1200px;
   margin: 0 auto;
   padding-left: 15px;
@@ -131,12 +136,20 @@ address {
   align-items: center;
 }
 
+.header-icons {
+  display: inline-block;
+  width: 16px;
+  height: 12px;
+  margin-right: 10px;
+  fill: currentColor;
+}
+
 .connect-item {
   display: block;
 }
 
 .connect-item:first-child {
-  margin-right: 50px;
+  margin-right: 30px;
 }
 
 .connect-link {
@@ -309,12 +322,17 @@ address {
 
 /* Цвет при наведении, фокусе и цвет акцента */
 
+/* .header-icons:hover {
+  fill: var(--accent-hover-color);
+} */
+
 .list-link:hover,
 .list-link:focus,
 .contact-list:hover,
 .contact-list:focus,
 .accent-color {
   color: var(--accent-hover-color);
+  fill: var(--accent-hover-color);
 }
 
 .button:hover,
@@ -411,6 +429,13 @@ address {
   margin-bottom: 0;
 }
 
+.project-item:hover,
+.project-item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+  cursor: pointer;
+}
+
 .portfolio-title {
   padding: 20px 24px;
   border-left: 1px solid var(--item-border-color);
@@ -433,4 +458,5 @@ address {
 
 .break-in {
   margin-top: 9px;
+  max-width: 231px;
 }
