--- a/css/styles.css
+++ b/css/styles.css
@@ -140,11 +140,11 @@ address {
 }
 
 .header-icons {
-  display: inline-block;
+  padding: 0;
   width: 16px;
-  height: 12px;
+  height: 16px;
   margin-right: 10px;
-  --icom-color: currentColor;
+  fill: currentColor;
 }
 
 .connect-item {
@@ -301,7 +301,7 @@ address {
 }
 
 .our-team {
-  padding-bottom: 50px;
+  margin-bottom: 50px;
   text-align: center;
   font-weight: 700;
   font-size: 36px;
@@ -334,7 +334,7 @@ address {
 }
 
 .position-title {
-  padding-top: 30px;
+  padding: 30px 32px;
 }
 
 .position {
@@ -342,16 +342,10 @@ address {
   color: var(--alt-text-color);
 }
 
-.social-networks {
-  margin-bottom: 30px;
-  margin-left: 32px;
-  margin-right: 32px;
-  margin-top: 10px;
-}
-
 .networks-list {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  margin-top: 16px;
 }
 
 .networks-item {
